fix main header font on mobile

--- a/static/css/mobile.css
+++ b/static/css/mobile.css
@@ -5,8 +5,8 @@ nav {
 
 /*MAIN*/
 .header{
-  font-size: 100px;
-  line-height: 77px;
+  font-size: 8em;
+  line-height: 90px;
 }
 
 #header {
